Backport core String lib refactor fix PR and migrate all ImmutableMap with j.u.map
Signed-off-by: Sicheng Song <sicheng.song@outlook.com>