@@ -46,7 +46,6 @@ import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.transport.TransportService;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableMap;
 
 import lombok.extern.log4j.Log4j2;
 
@@ -153,7 +152,7 @@ public class TransportSyncUpOnNodeAction extends
                 mlModelManager
                     .removeModelWorkerNode(
                         entry.getKey(),
-                        Optional.ofNullable(deployToAllNodes).orElse(ImmutableMap.of()).containsKey(entry.getKey()),
+                        Optional.ofNullable(deployToAllNodes).orElse(Map.of()).containsKey(entry.getKey()),
                         entry.getValue()
                     );
             }
@@ -212,8 +211,7 @@ public class TransportSyncUpOnNodeAction extends
                 mlTaskManager
                     .updateMLTask(
                         taskId,
-                        ImmutableMap
-                            .of(MLTask.STATE_FIELD, MLTaskState.FAILED, MLTask.ERROR_FIELD, "timeout after " + mlTaskTimeout + " seconds"),
+                        Map.of(MLTask.STATE_FIELD, MLTaskState.FAILED, MLTask.ERROR_FIELD, "timeout after " + mlTaskTimeout + " seconds"),
                         10_000,
                         true
                     );
