@@ -66,7 +66,6 @@ import org.opensearch.tasks.Task;
 import org.opensearch.test.OpenSearchTestCase;
 import org.opensearch.transport.TransportService;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 
 public class TransportForwardActionTests extends OpenSearchTestCase {
@@ -199,7 +198,7 @@ public class TransportForwardActionTests extends OpenSearchTestCase {
         when(mlTaskManager.getWorkNodes(anyString())).thenReturn(workerNodes);
         when(mlModelManager.getWorkerNodes(anyString())).thenReturn(new String[] { nodeId1 });
         MLTaskCache mlTaskCache = mock(MLTaskCache.class);
-        when(mlTaskCache.getErrors()).thenReturn(ImmutableMap.of());
+        when(mlTaskCache.getErrors()).thenReturn(Map.of());
         when(mlTaskCache.hasError()).thenReturn(false);
         when(mlTaskCache.getWorkerNodeSize()).thenReturn(1);
         when(mlTaskCache.errorNodesCount()).thenReturn(0);
