@@ -86,7 +86,6 @@ import org.opensearch.search.builder.SearchSourceBuilder;
 import org.opensearch.test.rest.OpenSearchRestTestCase;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 
@@ -146,8 +145,7 @@ public abstract class MLCommonsRestTestCase extends OpenSearchRestTestCase {
             + "    \"plugins.ml_commons.native_memory_threshold\" : 100 \n"
             + "  }\n"
             + "}";
-        response = TestHelper
-            .makeRequest(client(), "PUT", "_cluster/settings", ImmutableMap.of(), TestHelper.toHttpEntity(jsonEntity), null);
+        response = TestHelper.makeRequest(client(), "PUT", "_cluster/settings", Map.of(), TestHelper.toHttpEntity(jsonEntity), null);
         assertEquals(200, response.getStatusLine().getStatusCode());
     }
 
@@ -303,7 +301,7 @@ public abstract class MLCommonsRestTestCase extends OpenSearchRestTestCase {
                 ImmutableList.of(new BasicHeader(HttpHeaders.USER_AGENT, "Kibana"))
             );
 
-        Response statsResponse = TestHelper.makeRequest(client(), "GET", indexName, ImmutableMap.of(), "", null);
+        Response statsResponse = TestHelper.makeRequest(client(), "GET", indexName, Map.of(), "", null);
         assertEquals(RestStatus.OK, TestHelper.restStatus(statsResponse));
         String result = EntityUtils.toString(statsResponse.getEntity());
         assertTrue(result.contains(indexName));
@@ -383,7 +381,7 @@ public abstract class MLCommonsRestTestCase extends OpenSearchRestTestCase {
             endpoint += "?async=true";
         }
         Response response = TestHelper
-            .makeRequest(client(), "POST", endpoint, ImmutableMap.of(), TestHelper.toHttpEntity(trainModelDataJson()), null);
+            .makeRequest(client(), "POST", endpoint, Map.of(), TestHelper.toHttpEntity(trainModelDataJson()), null);
         TimeUnit.SECONDS.sleep(5);
         verifyResponse(consumer, response);
     }
@@ -534,7 +532,7 @@ public abstract class MLCommonsRestTestCase extends OpenSearchRestTestCase {
                 client,
                 "POST",
                 "/_plugins/_ml/_train_predict/" + functionName.name().toLowerCase(Locale.ROOT),
-                ImmutableMap.of(),
+                Map.of(),
                 TestHelper.toHttpEntity(kmeansInput),
                 null
             );
@@ -564,7 +562,7 @@ public abstract class MLCommonsRestTestCase extends OpenSearchRestTestCase {
         if (async) {
             endpoint += "?async=true";
         }
-        Response response = TestHelper.makeRequest(client, "POST", endpoint, ImmutableMap.of(), TestHelper.toHttpEntity(kmeansInput), null);
+        Response response = TestHelper.makeRequest(client, "POST", endpoint, Map.of(), TestHelper.toHttpEntity(kmeansInput), null);
         verifyResponse(function, response);
     }
 
@@ -584,7 +582,7 @@ public abstract class MLCommonsRestTestCase extends OpenSearchRestTestCase {
             .build();
         MLInput kmeansInput = MLInput.builder().algorithm(functionName).parameters(params).inputDataset(inputData).build();
         String endpoint = "/_plugins/_ml/_predict/" + functionName.name().toLowerCase(Locale.ROOT) + "/" + modelId;
-        Response response = TestHelper.makeRequest(client, "POST", endpoint, ImmutableMap.of(), TestHelper.toHttpEntity(kmeansInput), null);
+        Response response = TestHelper.makeRequest(client, "POST", endpoint, Map.of(), TestHelper.toHttpEntity(kmeansInput), null);
         verifyResponse(function, response);
     }
 
